--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 !/.config/aseprite/
 !/.config/fontconfig/
 !/.config/kitty/
+!/.config/lazygit/
 !/.config/mpv/
 !/.config/nsxiv/
 !/.config/picom.conf
